# Shirafuka-Practice

./: .gitignore  README.md  package.json  requirements.txt
.github/: copilot-instructions.md
.github/prompts/: add-readme-section.prompt.md  python.prompt.md  readme.prompt.md
Docs/: CTF_Docs.md
Node.js/: Node_fb2kRichPresence.js  PuppeteerDocs.js  csvread.js
Node.js/GoogleAPIs/: .env  GoogleAuth.js  GoogleCalendarPush.js
Node.js/csv/: csvread.csv
Python/: .env.example  AutoFolderUnZip.py  AutoScreenshot.py  BOOK-WALKER_NewBookCalendarPush.py  BOOK-WALKER_Sale_Information.py  Base64Decode.py  Bookmeter_LoadBookList.py  Bookmeter_link.py  CalendarTextCLI.py  ClassroomTaskCollector.py  DMMGAMEsCalendarPush.py  DMM_PurchhaseList.py  DirectoryText.py  FileRenames.py  Gboard_FormatText.py  GigaFile.py  GithubRepository_downloader.py  GoogleSheetTemplate.py  ImportOS_DirectoryText.py  LINE_analysis.py  LightNovel_CSV.py  LightNovel_GoogleCalendarPush.py  MediaDownloaderTool.py  MouseChanger.py  MouseChangerGUI.py  PDF_PasswordCancellation.py  PDF_ShirafukaToolCLI.py  Process_Moniter.py  RSS_Notification.py  RandomNumber.py  Tesseract-OCR.py  ToolsUpdater.py  URLChecker.py  USB_FileCopyChecker.py  Update_InstagramNote.py  VideoSpeedChange.py  YoutubeDownloaderTools.py  YoutubeLrcConverter.py  YoutubeVideoClipper.py  Youtube_PlayListChange.py  (+14 more)
Python/PyAutoGui/: CoreKeeper_AutoFish.py
Python/Template/: GoogleSheet_API.py  (+10 more)
Rust/google_tools_cli/: .gitignore  Cargo.toml  README.md  build_release.ps1
Rust/google_tools_cli/src/: main.rs
settings/: tools_config.json
(+2 files in other folders)
